--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -23,7 +23,7 @@ jobs:
       #   tag_name: "v%s"
       #   tag_message: "v%s"
       #   commit_pattern: "^Release (\\S+)"
-      - run: |
+      run: |
         npm publish
       env: # More info about the environment variables in the README
         NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }} # You need to set this in your repo settings
